Opened 13 years ago

Closed 13 years ago

#2045 closed defect (fixed)

FPE when copying timecode track

Reported by: Carl Eugen Hoyos Owned by:
Priority: important Component: avformat
Version: git-master Keywords: crash fpe regression mov
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

Using the sample from ticket #236

(gdb) r -i fcp_export8.mov -codec copy -map 0 out.mov
Starting program: /home/cehoyos/Projects/cehoyos/FFmpeg/ffmpeg_g -i fcp_export8.mov -codec copy -map 0 out.mov
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib64/libthread_db.so.1".
ffmpeg version N-47976-g1166fc0 Copyright (c) 2000-2012 the FFmpeg developers
  built on Dec 19 2012 09:33:55 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl --disable-indev=jack
  libavutil      52. 12.100 / 52. 12.100
  libavcodec     54. 80.100 / 54. 80.100
  libavformat    54. 49.102 / 54. 49.102
  libavdevice    54.  3.102 / 54.  3.102
  libavfilter     3. 28.102 /  3. 28.102
  libswscale      2.  1.103 /  2.  1.103
  libswresample   0. 17.102 /  0. 17.102
  libpostproc    52.  2.100 / 52.  2.100
Guessed Channel Layout for  Input Stream #0.1 : stereo
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'fcp_export8.mov':
  Metadata:
    major_brand     : qt
    minor_version   : 537199360
    compatible_brands: qt
    creation_time   : 2010-03-03 06:08:19
    timecode        : 00:00:00;00
  Duration: 00:00:00.14, start: 0.000000, bitrate: 35204 kb/s
    Stream #0:0(eng): Video: dvvideo (dvc  / 0x20637664), yuv411p, 720x480 [SAR 8:9 DAR 4:3], 28771 kb/s, SAR 10:11 DAR 15:11, 29.97 fps, 29.97 tbr, 2997 tbn, 29.97 tbc
    Metadata:
      creation_time   : 2010-03-03 06:08:19
      handler_name    : Apple Alias Data Handler
      timecode        : 01:00:00;00
    Stream #0:1(eng): Audio: pcm_s16le (sowt / 0x74776F73), 48000 Hz, stereo, s16, 1536 kb/s
    Metadata:
      creation_time   : 2010-03-03 06:08:19
      handler_name    : Apple Alias Data Handler
    Stream #0:2(eng): Data: none (tmcd / 0x64636D74)
    Metadata:
      creation_time   : 2010-03-03 06:08:19
      handler_name    : Apple Alias Data Handler
      timecode        : 01:00:00;00
    Stream #0:3(eng): Data: none (tmcd / 0x64636D74)
    Metadata:
      creation_time   : 2010-03-03 06:08:19
      handler_name    : Apple Alias Data Handler
      timecode        : 00:00:00;00
    Stream #0:4(eng): Data: none (tmcd / 0x64636D74)
    Metadata:
      creation_time   : 2010-03-03 06:08:19
      handler_name    : Apple Alias Data Handler
      timecode        : 00:00:00;00
[mov @ 0x15d1d60] You requested a copy of the original timecode track so timecode metadata are now ignored
    Last message repeated 2 times
Output #0, mov, to 'out.mov':
  Metadata:
    major_brand     : qt
    minor_version   : 537199360
    compatible_brands: qt
    timecode        : 00:00:00;00
    encoder         : Lavf54.49.102
    Stream #0:0(eng): Video: dvvideo (dvc  / 0x20637664), yuv411p, 720x480 [SAR 10:11 DAR 15:11], q=2-31, 28771 kb/s, 29.97 fps, 11988 tbn, 2997 tbc
    Metadata:
      creation_time   : 2010-03-03 06:08:19
      handler_name    : Apple Alias Data Handler
      timecode        : 01:00:00;00
    Stream #0:1(eng): Audio: pcm_s16le (sowt / 0x74776F73), 48000 Hz, stereo, 1536 kb/s
    Metadata:
      creation_time   : 2010-03-03 06:08:19
      handler_name    : Apple Alias Data Handler
    Stream #0:2(eng): Data: none (tmcd / 0x64636D74)
    Metadata:
      creation_time   : 2010-03-03 06:08:19
      handler_name    : Apple Alias Data Handler
      timecode        : 01:00:00;00
    Stream #0:3(eng): Data: none (tmcd / 0x64636D74)
    Metadata:
      creation_time   : 2010-03-03 06:08:19
      handler_name    : Apple Alias Data Handler
      timecode        : 00:00:00;00
    Stream #0:4(eng): Data: none (tmcd / 0x64636D74)
    Metadata:
      creation_time   : 2010-03-03 06:08:19
      handler_name    : Apple Alias Data Handler
      timecode        : 00:00:00;00
Stream mapping:
  Stream #0:0 -> #0:0 (copy)
  Stream #0:1 -> #0:1 (copy)
  Stream #0:2 -> #0:2 (copy)
  Stream #0:3 -> #0:3 (copy)
  Stream #0:4 -> #0:4 (copy)
Press [q] to stop, [?] for help

Program received signal SIGFPE, Arithmetic exception.
0x0000000000524a57 in mov_write_tmcd_tag (track=0x15d4960, pb=0x15d8020)
    at libavformat/movenc.c:1150
1150        int nb_frames = (track->timescale + frame_duration/2) / frame_duration;
(gdb) bt
#0  0x0000000000524a57 in mov_write_tmcd_tag (track=0x15d4960, pb=0x15d8020)
    at libavformat/movenc.c:1150
#1  mov_write_stsd_tag (track=0x15d4960, pb=0x15d8020) at libavformat/movenc.c:1202
#2  mov_write_stbl_tag (track=0x15d4960, pb=0x15d8020) at libavformat/movenc.c:1301
#3  mov_write_minf_tag (track=0x15d4960, pb=0x15d8020) at libavformat/movenc.c:1515
#4  mov_write_mdia_tag (track=0x15d4960, pb=0x15d8020) at libavformat/movenc.c:1562
#5  mov_write_trak_tag (st=0x15d31a0, track=0x15d4960, mov=0x15b41a0, pb=0x15d8020)
    at libavformat/movenc.c:1803
#6  mov_write_moov_tag (pb=0x15d8020, mov=0x15b41a0, s=0x15d1d60)
    at libavformat/movenc.c:2350
#7  0x00000000005283d5 in mov_write_trailer (s=0x15d1d60) at libavformat/movenc.c:3886
#8  0x000000000053d13e in av_write_trailer (s=0x15d1d60) at libavformat/mux.c:775
#9  0x000000000045263a in transcode () at ffmpeg.c:3064
#10 main (argc=<optimized out>, argv=<optimized out>) at ffmpeg.c:3218

Not reproducible when only copying audio and/or video.

Change History (3)

comment:1 by Carl Eugen Hoyos, 13 years ago

Keywords: mov added

comment:2 by Carl Eugen Hoyos, 13 years ago

Regression since 5c7a62a.

comment:3 by Carl Eugen Hoyos, 13 years ago

Resolution: fixed
Status: newclosed

Fixed by Michael.

Note: See TracTickets for help on using tickets.