ffmpeg: copy tmcd track timebase parameters

Fixes part of Ticket2045

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>